tests/NormalTests/paczka2/big_fuzzy/12090061.err
Error in line 1: AJTlp5hD A62 98,2
Error in line 5: e1vC4P A129 42,9
Error in line 9: ck2 A65 85,0
Error in line 11: 28VLiEUo0w9 A4 91,5
Error in line 16: 28VLiEUo0w9 A62 54,7
Error in line 18: 28VLiEUo0w9 A65 62,4
Error in line 21: e1vC4P A4 20,7
Error in line 23: ck2 A62 85,5
Error in line 22: e1vC4P A129 55,1
Error in line 28: ck2 A4 95,2
Error in line 32: ck2 A62 19,9
Error in line 31: 6rCM7Tu A129 48,6
Error in line 36: 6rCM7Tu A62 21,9
Error in line 30: e1vC4P A65 35,9
Error in line 43: AJTlp5hD A65 97,6
Error in line 49: NsmHzG09vxJ A65 29,3
Error in line 46: ck2 A129 80,6
Error in line 53: ck2 A4 69,5
Error in line 56: ck2 A4 66,05
Error in line 58: NsmHzG09vxJ A62 57,9
Error in line 54: ck2 A62 73,5
Error in line 63: NsmHzG09vxJ A65 0,2
Error in line 66: NsmHzG09vxJ A129 98,2
Error in line 67: NsmHzG09vxJ A4 23,5
Error in line 74: NsmHzG09vxJ A129 49,5
Error in line 76: 28VLiEUo0w9 A62 9,5
Error in line 79: NsmHzG09vxJ A65 9,5
Error in line 64: ck2 A4 186,9
Error in line 98: ck2 A65 88,8
Error in line 100: ck2 A129 51,1
Error in line 101: 6rCM7Tu A129 56,2
Error in line 108: 6rCM7Tu A62 24,4
Error in line 112: NsmHzG09vxJ A129 41,4
Error in line 114: 6rCM7Tu A129 45,4
Error in line 85: A62 A129 8,8
Error in line 123: A62 A65 21,6
Error in line 126: A62 A4 80,1
Error in line 132: e1vC,P A62 11,0
Error in line 122: 6rCM7Tu A4 54,3
Error in line 120: AJTlp5hD A65 91,5
Error in line 129: ck2 A4 61,4
Error in line 140: AJTlp5hD A4 62,9
Error in line 136: NsmHzG09vxJ A62 77,1
Error in line 130: e1vC4P A62 4,6
Error in line 145: ck2 A4 83,6
Error in line 155: 6rCM7Tu A129 17,3
Error in line 170: NsmHzG09vxJ A62 36,8
Error in line 171: e1vC4P A4 75,5
Error in line 172: NsmHzG09vxJ A4 2,2
Error in line 173: e1vC4P A129 94,3
Error in line 159: ck2 A129 270,9
Error in line 178: ck2 A62 26,9
Error in line 184: AJTlp5hD A65 66,5
Error in line 188: AJTlp5hD A62 0,8
Error in line 182: e1vC4P A62 192,9
Error in line 205: ck2 A62 49,1
Error in line 210: A62 A4 93,6
Error in line 196: 28VLiEUo0w9 A62 47,9
Error in line 216: AJTlp5hD A4 69,88
Error in line 220: A62 A62 18,1
Error in line 227: NsmHzG09vxJ A4 85,4
Error in line 226: 28VLiEUo0w9 A129 109,7
Error in line 236: 6rCM7Tu A62 5,9
Error in line 240: e1vC4P A4 86,3
Error in line 239: 6rCM7Tu A4 33,1
